# preembed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  wheels.yml
python/preembed/: __init__.py  pipeline.py  report.py  text.py  types.py
rust/: Cargo.toml
rust/src/: chunk.rs  clean.rs  dedupe.rs  error.rs  lib.rs  score.rs
tests/: conftest.py  test_edge_cases.py  test_golden_fixtures.py  test_pipeline_io.py  test_property.py  test_public_api.py  test_retrieval_eval.py  test_streaming.py
