[package]
name = "preembed_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AdityaMunot/preembed"
homepage = "https://github.com/AdityaMunot/preembed"
description = "Performance-critical core for the preembed Python package."

[lib]
name = "preembed_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.21"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "primitives"
harness = false
